# disks-rs

./: Cargo.toml  README.md
crates/disks/: Cargo.toml
crates/disks/src/: disk.rs  lib.rs  loopback.rs  mmc.rs  mock.rs  nvme.rs  partition.rs  scsi.rs  sysfs.rs  virt.rs
crates/partitioning/: Cargo.toml
crates/partitioning/src/: blkpg.rs  lib.rs  loopback.rs  planner.rs  sparsefile.rs  strategy.rs
crates/provisioning/: Cargo.toml
crates/provisioning/src/: commands.rs  errors.rs  helpers.rs  lib.rs  provisioner.rs  types.rs
crates/provisioning/src/commands/: create_partition.rs  create_partition_table.rs  find_disk.rs
crates/provisioning/src/types/: constraints.rs  partition_role.rs  partition_table.rs  units.rs
crates/provisioning/tests/: use_whole_disk.kdl
crates/superblock/: Cargo.toml
crates/superblock/src/: btrfs.rs  ext4.rs  f2fs.rs  fat.rs  lib.rs  luks2.rs  xfs.rs
crates/superblock/src/luks2/: config.rs  superblock.rs
crates/superblock/tests/: README.md  fat16.img.zst  fat32.img.zst
disk-test/: Cargo.toml
disk-test/src/: main.rs
