[workspace]
resolver = "2"

default-members = [
    "crates/*",
]

members = [
    "disk-test",
    "crates/*",
]

[workspace.dependencies]
gpt = "4.0.0"
linux-raw-sys = "0.7.0"
log = "0.4.21"
nix = { version = "0.29.0", features = ["fs", "mount"] }
serde = { version = "1.0" }
serde_json = "1.0"
serde_with = "3.0"
test-log = "0.2.17"
thiserror = "2.0.3"
uuid = { version = "1.8.0", features = ["v8"] }
zerocopy = "0.8.0"
zstd = "0.13.1"
