[package]
name = "provisioning"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
miette = { workspace = true }

[dependencies]
kdl = { workspace = true, features = ["span"] }
miette = { workspace = true }
itertools = { workspace = true }
phf = { workspace = true, features = ["macros"] }
thiserror.workspace = true
