[package]
name = "superblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true, features = ["v8"] }
thiserror.workspace = true
log.workspace = true
zerocopy = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
test-log.workspace = true
zstd.workspace = true
