[package]
name = "superblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = { workspace = true, features = ["json", "macros"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["v8"] }
zerocopy = { workspace = true, features = ["derive", "std"] }

[dev-dependencies]
test-log.workspace = true
zstd.workspace = true
